@@ -16,7 +16,6 @@
 package com.intellij.openapi.wm.impl;
 
 import com.intellij.ide.IdeEventQueue;
-import com.intellij.ide.UiActivity;
 import com.intellij.ide.UiActivityMonitor;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.DataContext;
@@ -37,7 +36,6 @@ import com.intellij.openapi.wm.IdeFocusManager;
 import com.intellij.openapi.wm.IdeFrame;
 import com.intellij.openapi.wm.WindowManager;
 import com.intellij.openapi.wm.ex.IdeFocusTraversalPolicy;
-import com.intellij.openapi.wm.ex.LayoutFocusTraversalPolicyExt;
 import com.intellij.ui.popup.AbstractPopup;
 import com.intellij.util.concurrency.EdtExecutorService;
 import com.intellij.util.containers.ContainerUtil;
@@ -49,24 +47,18 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.FocusEvent;
 import java.awt.event.WindowEvent;
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyChangeListener;
 import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   private static final Logger LOG = Logger.getInstance(FocusManagerImpl.class);
-  private static final UiActivity FOCUS = new UiActivity.Focus("awtFocusRequest");
-  private static final UiActivity TYPEAHEAD = new UiActivity.Focus("typeahead");
 
   private final Application myApp;
 
-  private final boolean isInternalMode = ApplicationManagerEx.getApplicationEx().isInternal();
-  private final LinkedList<FocusRequestInfo> myRequests = new LinkedList<>();
+  private final List<FocusRequestInfo> myRequests = new LinkedList<>();
 
   private final IdeEventQueue myQueue;
 
@@ -76,7 +68,6 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   private final Set<FurtherRequestor> myValidFurtherRequestors = new HashSet<>();
 
   private final Set<ActionCallback> myTypeAheadRequestors = new HashSet<>();
-  private final UiActivityMonitor myActivityMonitor;
   private boolean myTypeaheadEnabled = true;
 
   private final Map<IdeFrame, Component> myLastFocused = ContainerUtil.createWeakValueMap();
@@ -90,7 +81,6 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   public FocusManagerImpl(ServiceManagerImpl serviceManager, WindowManager wm, UiActivityMonitor monitor) {
     myApp = ApplicationManager.getApplication();
     myQueue = IdeEventQueue.getInstance();
-    myActivityMonitor = monitor;
 
     myFocusedComponentAlarm = new EdtAlarm();
     myForcedFocusRequestsAlarm = new EdtAlarm();
@@ -123,12 +113,9 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
       return false;
     }, this);
 
-    KeyboardFocusManager.getCurrentKeyboardFocusManager().addPropertyChangeListener("focusedWindow", new PropertyChangeListener() {
-      @Override
-      public void propertyChange(PropertyChangeEvent evt) {
-        if (evt.getNewValue() instanceof IdeFrame) {
-          myLastFocusedFrame = (IdeFrame)evt.getNewValue();
-        }
+    KeyboardFocusManager.getCurrentKeyboardFocusManager().addPropertyChangeListener("focusedWindow", evt -> {
+      if (evt.getNewValue() instanceof IdeFrame) {
+        myLastFocusedFrame = (IdeFrame)evt.getNewValue();
       }
     });
   }
@@ -138,10 +125,12 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     return myLastFocusedFrame;
   }
 
+  @Override
   public ActionCallback requestFocusInProject(@NotNull Component c, @Nullable Project project) {
     if (ApplicationManagerEx.getApplicationEx().isActive() || !Registry.is("suppress.focus.stealing")) {
       c.requestFocus();
-    } else {
+    }
+    else {
       c.requestFocusInWindow();
     }
     return ActionCallback.DONE;
@@ -162,7 +151,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   public void recordFocusRequest(Component c, boolean forced) {
     myRequests.add(new FocusRequestInfo(c, new Throwable(), forced));
     if (myRequests.size() > 200) {
-      myRequests.removeFirst();
+      myRequests.remove(0);
     }
   }
 
@@ -252,20 +241,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
                                                 IdeEventQueue.getInstance().runnablesWaitingForFocusChangeState();
                                        }
                                      },
-                                     true).doWhenProcessed(() -> {
-      myTypeAheadRequestors.remove(done);
-    }));
-  }
-
-  private void revalidateFurtherRequestors() {
-    Iterator<FurtherRequestor> requestorIterator = myValidFurtherRequestors.iterator();
-    while (requestorIterator.hasNext()) {
-      FurtherRequestor each = requestorIterator.next();
-      if (each.isExpired()) {
-        requestorIterator.remove();
-        Disposer.dispose(each);
-      }
-    }
+                                     true).doWhenProcessed(() -> myTypeAheadRequestors.remove(done)));
   }
 
   @Override
@@ -334,7 +310,8 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
         if (ApplicationManager.getApplication().isActive()) {
           if (window instanceof JFrame && ((JFrame)window).getState() == Frame.ICONIFIED) {
             ((JFrame)window).setState(Frame.NORMAL);
-          } else {
+          }
+          else {
             window.toFront();
           }
         }
@@ -403,54 +380,11 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
           myLastFocusedAtDeactivation.put(ideFrame, owner);
         }
     }
-
-    private void focusLastFocusedComponent(IdeFrame ideFrame) {
-      final KeyboardFocusManager mgr = KeyboardFocusManager.getCurrentKeyboardFocusManager();
-      if (mgr.getFocusOwner() == null) {
-        Component c = getComponent(myLastFocusedAtDeactivation, ideFrame);
-        if (c == null || !c.isShowing()) {
-          c = getComponent(myLastFocusedAtDeactivation, ideFrame);
-        }
-
-        final boolean mouseEventAhead = IdeEventQueue.isMouseEventAhead(null);
-        if (c != null && c.isShowing() && !mouseEventAhead) {
-          final LayoutFocusTraversalPolicyExt policy = LayoutFocusTraversalPolicyExt.findWindowPolicy(c);
-          if (policy != null) {
-            policy.setNoDefaultComponent(true, FocusManagerImpl.this);
-          }
-          requestFocus(c, false).doWhenProcessed(() -> {
-            if (policy != null) {
-              policy.setNoDefaultComponent(false, FocusManagerImpl.this);
-            }
-          });
-        }
-      }
-
-      myLastFocusedAtDeactivation.remove(ideFrame);
-    }
-  }
-
-  @Nullable
-  private static Component getComponent(@NotNull Map<IdeFrame, Component> map, IdeFrame frame) {
-    return map.get(frame);
   }
 
   @Override
   public JComponent getFocusTargetFor(@NotNull JComponent comp) {
     return IdeFocusTraversalPolicy.getPreferredFocusedComponent(comp);
-  }
-
-  public List<JBPopup> getChildPopups(@NotNull final Component component) {
-    return AbstractPopup.all.toStrongList().stream().filter(popup -> {
-      Component owner = popup.getOwner();
-      while (owner != null) {
-        if (owner.equals(component)) {
-          return true;
-        }
-        owner = owner.getParent();
-      }
-      return false;
-    }).collect(Collectors.toList());
   }
 
   @Override
@@ -460,7 +394,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
 
     if (focused == comp || SwingUtilities.isDescendingFrom(focused, comp)) return focused;
 
-    List<JBPopup> popups = getChildPopups(comp);
+    List<JBPopup> popups = AbstractPopup.getChildPopups(comp);
     for (JBPopup each : popups) {
       if (each.isFocused()) return focused;
     }
@@ -485,27 +419,30 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
           if (each instanceof JFrame) {
             toFocus = getFocusTargetFor(((JFrame)each).getRootPane());
             break;
-          } else if (each instanceof JDialog) {
+          }
+          else if (each instanceof JDialog) {
             toFocus = getFocusTargetFor(((JDialog)each).getRootPane());
             break;
-          } else if (each instanceof JWindow) {
+          }
+          else if (each instanceof JWindow) {
             toFocus = getFocusTargetFor(((JWindow)each).getRootPane());
             break;
-          }          
+          }
         }
       }
-    } 
-    
+    }
+
     if (toFocus != null) {
       if (ApplicationManagerEx.getApplicationEx().isActive() || !Registry.is("suppress.focus.stealing")) {
         toFocus.requestFocus();
-      } else {
+      }
+      else {
         toFocus.requestFocusInWindow();
       }
       return ActionCallback.DONE;
     }
-    
-    
+
+
     return ActionCallback.DONE;
   }
 
